ontopia/src/test-data/ltm/error/bad-subject-indicator.ltm
#PREFIX namewith @"http://some-address/#"

[topic @namewith:colon]